fix(button): is visible in 'disabled' state

--- a/src/components/atoms/Button/styles.scss
+++ b/src/components/atoms/Button/styles.scss
@@ -30,7 +30,3 @@
     background: var(--snui-color-info-100);
   }
 }
-
-.snui-button-disabled {
-  background: var(--snui-color-disabled);
-}
