--- a/src/sass/base/_utils.scss
+++ b/src/sass/base/_utils.scss
@@ -816,7 +816,6 @@
 
 // disabled
 .snui-disabled {
-  background: var(--snui-color-disabled);
   cursor: not-allowed !important;
   opacity: 0.4 !important;
 }
